Fix: number hidden when it's too long.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ h1 {
   border: 1px solid #9f865c;
   box-shadow: inset 0 0 0.5em #9f865c;
   margin-bottom: 6px;
+  overflow: hidden;
+  white-space:nowrap;
 }
 .screen p{
   font-family: 'Orbitron', sans-serif;
